# relay

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.cursor/rules/: 010-overview.mdc  011-user-journeys.mdc  012-key-concepts.mdc  020-structure.mdc  030-tech-stack.mdc
.cursor/rules/tasks/: writing-docs.mdc  writing-python.mdc
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml  release.yml  verify_deps_sync.py
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: core.yml  docker.yml  engine.yml  package.yml  triage.yml
cli/: main.py  utils.py
cli/commands/: account.py  auth.py  messages.py
docs/: docs.json
docs/api-reference/accounts/: connect-account.mdx  disconnect-account.mdx  list-accounts.mdx  read-account.mdx  update-account.mdx
docs/api-reference/inbox/: fetch-emails.mdx
docs/api-reference/keys/: create-key.mdx  list-keys.mdx  revoke-key.mdx
docs/api-reference/user/: delete-picture.mdx  read-me.mdx  update-name.mdx  update-picture.mdx
docs/changelog/: overview.mdx
docs/documentation/community/: contributing.mdx  faq.mdx  roadmap.mdx  support.mdx
docs/documentation/getting-started/: concepts.mdx  introduction.mdx  quickstart.mdx
docs/reference/cli/: accounts.mdx  messages.mdx
relay/: __init__.py  exceptions.py
relay/auth/: account.py  credentials.py  storage.py
relay/cli/: _utils.py  main.py
relay/cli/commands/: account.py  accounts.py  messages.py
relay/models/: account.py  base.py  message.py
relay/providers/: imap.py  smtp.py  utils.py
scripts/: install.sh
tests/: conftest.py
tests/auth/: test_credentials.py  test_storage.py
tests/providers/: test_imap.py  test_smtp.py
